force-app/main/default/objects/AccountProjectBenchmarkItem__c/AccountProjectBenchmarkItem__c.object-meta.xml
<CustomObject>
    <description>Benchmark Items that make up a Benchmark Score</description>
    <label>Account Project Benchmark Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Project Benchmark Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>