force-app/main/default/objects/AccountProjectBenchmarkItem__c/fields/AccountProjectBenchmark__c.field-meta.xml
<CustomField>
    <fullName>AccountProjectBenchmark__c</fullName>
    <description>Account Project Benchmark Associated with the Benchmark Item</description>
    <inlineHelpText>Account Project Benchmark Associated with the Benchmark Item</inlineHelpText>
    <label>Account Project Benchmark</label>
    <referenceTo>AccountProjectBenchmark__c</referenceTo>
    <relationshipLabel>Account Project Benchmark Items</relationshipLabel>
    <relationshipName>AccountProjectBenchmarkItemsAccountProje</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>