force-app/main/default/objects/AccountProjectBenchmarkItem__c/fields/BenchmarkType__c.field-meta.xml
<CustomField>
    <fullName>BenchmarkType__c</fullName>
    <description>The Type of Benchmark Input</description>
    <inlineHelpText>The Type of Benchmark Input</inlineHelpText>
    <label>Benchmark Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BenchmarkInputType</valueSetName>
    </valueSet>
</CustomField>