force-app/main/default/objects/AccountProjectBenchmarkItem__c/fields/BenchmarkValue__c.field-meta.xml
<CustomField>
    <fullName>BenchmarkValue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Value for Benchmark Item</description>
    <inlineHelpText>Value for Benchmark Item</inlineHelpText>
    <label>Benchmark Value</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>