force-app/main/default/objects/AccountProjectBenchmarkItem__c/validationRules/BenchmarkValueGTZero.validationRule-meta.xml
<ValidationRule>
    <fullName>BenchmarkValueGTZero</fullName>
    <active>true</active>
    <description>Benchmark Value must be greater than 0</description>
    <errorConditionFormula>BenchmarkValue__c &lt; 0</errorConditionFormula>
    <errorMessage>Benchmark Value must be greater than 0</errorMessage>
</ValidationRule>